[gd_scene load_steps=5 format=3 uid="uid://cn7qogjnirpsd"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_1j7ki"]
[ext_resource type="PackedScene" uid="uid://dt2jab7am6q1a" path="res://scenes/level2.tscn" id="2_v8vgi"]
[ext_resource type="PackedScene" uid="uid://cd2fecafumyhj" path="res://scenes/droppable_area.tscn" id="5_c5hg8"]
[ext_resource type="PackedScene" uid="uid://cp5amrfghw7x2" path="res://scenes/door.tscn" id="7_uo2tl"]

[node name="Level1" type="Node2D"]
position = Vector2(0, 221)
script = ExtResource("1_1j7ki")
NextLevel = ExtResource("2_v8vgi")
level_name = "level1"
level_num = 1.0

[node name="Droppable Area" parent="." instance=ExtResource("5_c5hg8")]
position = Vector2(2528, 240)

[node name="Droppable Area3" parent="." instance=ExtResource("5_c5hg8")]
position = Vector2(3745, 109)

[node name="Door" parent="." instance=ExtResource("7_uo2tl")]
position = Vector2(3100, 414)
scale = Vector2(2.25, 2.25)
boolean_type = true

[node name="Platform2" parent="." instance=ExtResource("7_uo2tl")]
position = Vector2(4639, 484)
rotation = 1.57079
scale = Vector2(2, 2)
integer_type = true

[node name="Platform1" parent="." instance=ExtResource("7_uo2tl")]
position = Vector2(4003, 553)
rotation = 1.5708
scale = Vector2(2, 2)
integer_type = true

[node name="Platform31" parent="." instance=ExtResource("7_uo2tl")]
position = Vector2(5338, 458)
rotation = 1.5708
scale = Vector2(2, 2)
integer_type = true

[node name="Droppable Area5" parent="." instance=ExtResource("5_c5hg8")]
position = Vector2(10608, -407)

[node name="Droppable Area2" parent="." instance=ExtResource("5_c5hg8")]
position = Vector2(10608, -271)

[node name="Droppable Area4" parent="." instance=ExtResource("5_c5hg8")]
position = Vector2(10608, -134)

[node name="Label2" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
